--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,6 +18,7 @@ project ( examples )
 ##                  subdir name   CPU       GPU
 
 manage_add_subdir ( batch1ddft    TRUE      TRUE )
+manage_add_subdir ( batch1dprdft  TRUE      TRUE )
 manage_add_subdir ( mddft         TRUE      TRUE )
 manage_add_subdir ( mdprdft       TRUE      TRUE )
 
