Increase verbosity in testrconv_lib in order to locate error.

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -91,5 +91,5 @@ jobs:
       run: |
         cd $FFTX_HOME
         ./bin/testverify_lib
-        ./bin/testrconv_lib
+        ./bin/testrconv_lib -v 3
 
