--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -11,31 +11,31 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-software
-        ##  ref: develop
+        ref: develop
         path: spiral
     - name: Checkout repo spiral-package-fftx
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-package-fftx
-        ##  ref: develop
+        ref: develop
         path: spiral/namespaces/packages/fftx
     - name: Checkout repo spiral-package-simt
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-package-simt
-        ##  ref: develop
+        ref: develop
         path: spiral/namespaces/packages/simt
     - name: Checkout repo spiral-package-mpi
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-package-mpi
-        ##  ref: develop
+        ref: develop
         path: spiral/namespaces/packages/mpi
     - name: Checkout repo spiral-package-jit
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-package-jit
-        ##  ref: develop
+        ref: develop
         path: spiral/namespaces/packages/jit
     - name: Install dependencies
       run: |
@@ -90,6 +90,8 @@ jobs:
         FFTX_HOME: ${{ github.workspace }}/fftx
       run: |
         cd $FFTX_HOME
+        echo "github.ref = ${{github.ref}}"
+        echo "github.ref_name = ${{github.ref_name}}"
+        echo "github.workspace = ${{github.workspace}}"
         ./bin/testverify_lib
         ./bin/testrconv_lib -v 3
-
