--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -59,7 +59,7 @@ jobs:
     - name: Checkout FFTX
       uses: actions/checkout@v4
       with:
-        repository: spiral-software/fftx
+        repository: petermcLBL/fftx
         ##  ref: develop
         ref: ${{ github.ref_name }}
         path: fftx
