--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -947,6 +947,18 @@ WARN_LOGFILE           =
 
 INPUT                  = "@DOXYGEN_INPUT_DIR@/fftx3.hpp" \
                          "@DOXYGEN_INPUT_DIR@/interface.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/mddftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/imddftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/mdprdftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/imdprdftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/bath1ddftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/ibatch1ddftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/batch1dprdftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/ibatch1dprdftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/bath2ddftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/ibatch2ddftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/batch2dprdftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/ibatch2dprdftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftx3utilities.h"
 # INPUT                  = ../src/include/fftx3.hpp \
 #                          ../src/include/interface.hpp \
