--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -93,3 +93,9 @@ jobs:
         cd $FFTX_HOME
         ./bin/testverify_lib
         ./bin/testrconv_lib
+        ./bin/testverify -s 40x40x40
+        ./bin/testrconv -s 40x40x40
+        ./bin/testmddft -s 40x40x40
+        ./bin/testmdprdft -s 40x40x40
+        ./bin/testbatch1ddft -s 40x4
+        ./bin/testbatch1dprdft -s 40x4
