test build docs locally and add a generated on timestamp

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -11,31 +11,31 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-software
-        ##  ref: develop
+        ref: develop
         path: spiral
     - name: Checkout repo spiral-package-fftx
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-package-fftx
-        ##  ref: develop
+        ref: develop
         path: spiral/namespaces/packages/fftx
     - name: Checkout repo spiral-package-simt
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-package-simt
-        ##  ref: develop
+        ref: develop
         path: spiral/namespaces/packages/simt
     - name: Checkout repo spiral-package-mpi
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-package-mpi
-        ##  ref: develop
+        ref: develop
         path: spiral/namespaces/packages/mpi
     - name: Checkout repo spiral-package-jit
       uses: actions/checkout@v4
       with:
         repository: spiral-software/spiral-package-jit
-        ##  ref: develop
+        ref: develop
         path: spiral/namespaces/packages/jit
     - name: Install dependencies
       run: |
@@ -59,9 +59,10 @@ jobs:
     - name: Checkout FFTX
       uses: actions/checkout@v4
       with:
-        repository: spiral-software/fftx
+        ## repository: spiral-software/fftx
+        repository: ${{ github.repository }}
         ##  ref: develop
-        ref: ${{ github.ref }}
+        ref: ${{ github.ref_name }}
         path: fftx
     - name: Configure FFTX
       env:
@@ -92,4 +93,9 @@ jobs:
         cd $FFTX_HOME
         ./bin/testverify_lib
         ./bin/testrconv_lib
-
+        ./bin/testverify -s 40x40x40
+        ./bin/testrconv -s 40x40x40
+        ./bin/testmddft -s 40x40x40
+        ./bin/testmdprdft -s 40x40x40
+        ./bin/testbatch1ddft -s 40x4
+        ./bin/testbatch1dprdft -s 40x4
