--- a/examples/3DDFT_mpi/CMakeLists.txt
+++ b/examples/3DDFT_mpi/CMakeLists.txt
@@ -22,7 +22,7 @@ set ( _prefixes )
 
 set ( BUILD_PROGS test${PROJECT_NAME}_2D test${PROJECT_NAME}_1D )
 
-##  One .cpp file is coded with device_macros and should build for CUDA & HIP
+##  One .cpp file is coded with fftxdevice_macros and should build for CUDA & HIP
 set ( _desired_suffix cpp )
 
 ##  ===== For most examples you should not need to modify anything BELOW this line =====
