--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -946,14 +946,14 @@ WARN_LOGFILE           =
 # Note: If this tag is empty the current directory is searched.
 
 INPUT                  = "@DOXYGEN_INPUT_DIR@/fftx3.hpp" \
-                         "@DOXYGEN_INPUT_DIR@/interface.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/fftxinterface.hpp" \
                          "@DOXYGEN_INPUT_DIR@/mddftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/imddftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/mdprdftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/imdprdftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftx3utilities.h"
 # INPUT                  = ../src/include/fftx3.hpp \
-#                          ../src/include/interface.hpp \
+#                          ../src/include/fftxinterface.hpp \
 #                          ../src/include/fftx3utilities.h
 
 # This tag can be used to specify the character encoding of the source files
