--- a/src/include/CMakeLists.txt
+++ b/src/include/CMakeLists.txt
@@ -8,12 +8,12 @@
 cmake_minimum_required ( VERSION ${CMAKE_MINIMUM_REQUIRED_VERSION} )
 
 set ( _incl_files fftx3.hpp fftx3utilities.h doxygen.config )
-list ( APPEND _incl_files cpubackend.hpp cudabackend.hpp dftbatlib.hpp fftxfft.hpp
-                          hipbackend.hpp interface.hpp mddftlib.hpp mdprdftlib.hpp
-                          transformlib.hpp syclbackend.hpp )
-list ( APPEND _incl_files batch1ddftObj.hpp ibatch1ddftObj.hpp batch2ddftObj.hpp ibatch2ddftObj.hpp)
-list ( APPEND _incl_files batch1dprdftObj.hpp ibatch1dprdftObj.hpp batch2dprdftObj.hpp ibatch2dprdftObj.hpp)
-list ( APPEND _incl_files mddftObj.hpp imddftObj.hpp mdprdftObj.hpp imdprdftObj.hpp)
+list ( APPEND _incl_files fftxcpubackend.hpp fftxcudabackend.hpp fftxdftbatlib.hpp fftxfft.hpp
+                          fftxhipbackend.hpp fftxinterface.hpp fftxmddftlib.hpp fftxmdprdftlib.hpp
+                          fftxtransformlib.hpp fftxsyclbackend.hpp )
+list ( APPEND _incl_files fftxbatch1ddftObj.hpp fftxibatch1ddftObj.hpp fftxbatch2ddftObj.hpp fftxibatch2ddftObj.hpp)
+list ( APPEND _incl_files fftxbatch1dprdftObj.hpp fftxibatch1dprdftObj.hpp fftxbatch2dprdftObj.hpp fftxibatch2dprdftObj.hpp)
+list ( APPEND _incl_files fftxmddftObj.hpp fftximddftObj.hpp fftxmdprdftObj.hpp fftximdprdftObj.hpp)
 
 install ( FILES ${_incl_files}
           DESTINATION ${CMAKE_INSTALL_PREFIX}/include )
