--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -35,9 +35,8 @@ else ()
 endif ()
 
 ##  Check if a Fortran compiler is available
-if ( CMAKE_Fortran_COMPILER )
+if ( Fortran_ENABLED )
     message ( STATUS "Fortran compiler found: ${CMAKE_Fortran_COMPILER}; will build Fortran example" )
-
     ##  Build the Fortran example
     manage_add_subdir ( fortran       TRUE      TRUE )
 else ()
