--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -951,10 +951,10 @@ INPUT                  = "@DOXYGEN_INPUT_DIR@/fftx3.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftximddftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftxmdprdftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftximdprdftObj.hpp" \
-                         "@DOXYGEN_INPUT_DIR@/fftx3utilities.h"
+                         "@DOXYGEN_INPUT_DIR@/fftxutilities.hpp"
 # INPUT                  = ../src/include/fftx3.hpp \
 #                          ../src/include/fftxinterface.hpp \
-#                          ../src/include/fftx3utilities.h
+#                          ../src/include/fftxutilities.hpp
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
