--- a/src/include/doxygen.config
+++ b/src/include/doxygen.config
@@ -501,7 +501,7 @@ WARN_LOGFILE           = doxygen.warn
 # directories like "/usr/src/myproject". Separate the files or directories 
 # with spaces.
 
-INPUT                  = fftx3.hpp 
+INPUT                  = fftx.hpp 
 
 # This tag can be used to specify the character encoding of the source files 
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is 
