--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -945,16 +945,16 @@ WARN_LOGFILE           =
 # spaces. See also FILE_PATTERNS and EXTENSION_MAPPING
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = "@DOXYGEN_INPUT_DIR@/fftx3.hpp" \
+INPUT                  = "@DOXYGEN_INPUT_DIR@/fftx.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftxinterface.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftxmddftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftximddftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftxmdprdftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftximdprdftObj.hpp" \
-                         "@DOXYGEN_INPUT_DIR@/fftx3utilities.h"
-# INPUT                  = ../src/include/fftx3.hpp \
+                         "@DOXYGEN_INPUT_DIR@/fftxutilities.hpp"
+# INPUT                  = ../src/include/fftx.hpp \
 #                          ../src/include/fftxinterface.hpp \
-#                          ../src/include/fftx3utilities.h
+#                          ../src/include/fftxutilities.hpp
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
