--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -48,7 +48,7 @@ PROJECT_NAME           = FFTX
 # could be handy for archiving the generated documentation or if some version
 # control system is used.
 
-PROJECT_NUMBER         = 1.1.3
+PROJECT_NUMBER         = 1.3.0
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description
 # for a project that appears at the top of each page and should give viewer a
@@ -505,7 +505,7 @@ NUM_PROC_THREADS       = 1
 # Possible values are: YES, NO, DATETIME and DATE.
 # The default value is: NO.
 
-TIMESTAMP              = NO
+TIMESTAMP              = DATE
 
 #---------------------------------------------------------------------------
 # Build related configuration options
@@ -519,7 +519,7 @@ TIMESTAMP              = NO
 # normally produced when WARNINGS is set to YES.
 # The default value is: NO.
 
-EXTRACT_ALL            = NO
+EXTRACT_ALL            = YES
 
 # If the EXTRACT_PRIVATE tag is set to YES, all private members of a class will
 # be included in the documentation.
@@ -945,17 +945,17 @@ WARN_LOGFILE           =
 # Note: If this tag is empty the current directory is searched.
 
 INPUT                  = "@DOXYGEN_INPUT_DIR@/fftx.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/fftx_base_types.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftxinterface.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftxmddftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftximddftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftxmdprdftObj.hpp" \
                          "@DOXYGEN_INPUT_DIR@/fftximdprdftObj.hpp" \
-                         "@DOXYGEN_INPUT_DIR@/fftxutilities.hpp" \
-                         "@DOXYGEN_INPUT_DIR@/doc_templates.hpp"
-                         
-# INPUT                  = ../src/include/fftx.hpp \
-#                          ../src/include/fftxinterface.hpp \
-#                          ../src/include/fftxutilities.hpp
+                         "@DOXYGEN_INPUT_DIR@/fftxbatch1ddftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/fftxibatch1ddftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/fftxbatch1dprdftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/fftxibatch1dprdftObj.hpp" \
+                         "@DOXYGEN_INPUT_DIR@/fftxutilities.hpp"
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
